<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FreEV</string>
    <string name="menu_settings">Settings</string>
    <string name="money_saved">TOTAL MONEY SAVED</string>
    <string name="nok_saved">0 NOK</string>
    <string name="rate">Rate</string>
    <string name="rate2">Price</string>
    <string name="time">Time</string>
    <string name="total_price">Rate x Time</string>
    <string name="new_savings">NEW PARKING</string>
    <string name="register_parking">REGISTER PARKING!</string>
    <string name="cancel_parking">CANCEL PARKING!</string>
    <string name="saving_progress">SAVING PROGRESS</string>
    <string name="save_new">SAVE FOR SOMETHING NEW</string>
    <string name="new_savings2">NEW TOLL PASS</string>
    <string name="new_savings3">REGISTER TOLL PASS</string>
    <string name="lol">lol</string>

</resources>